--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "version": "1.0.0",
   "main": "server.js",
   "author": "0xYiga",
-  "license": "ISC"
+  "license": "ISC",
+  "engines": {
+    "node": "14.x"
+  }
 }
